[package]
name = "loupedeck_plugin_discord"
version = "0.0.0"
authors = ["Adam Dierkens <adam@dierkens.com>"]
edition = "2021"
license = "MIT"
description = "Loupedeck plugin to interact with discord"
repository = "https://github.com/adierkens/loupedeck-rs/"

[lib]
crate-type = ["cdylib"]

[dependencies]
loupedeck = { path = "../lib" }
