[package]
name = "loupedeck"
version = "0.0.0"
authors = ["Adam Dierkens <adam@dierkens.com>"]
edition = "2021"
license = "MIT"
description = "Loupedeck serial drivers in rust"
repository = "https://github.com/adierkens/loupedeck-rs/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# serialport = "4.2.0"
tokio-serial = "5.4.3"
mio-serial = "5.0.2"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
rustc_version = "0.2.3"