[package]
name = "loupedeck"
version = "0.0.0"
authors = ["Adam Dierkens <adam@dierkens.com>"]
edition = "2021"
license = "MIT"
description = "Loupedeck serial drivers in rust"
repository = "https://github.com/adierkens/loupedeck-rs/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio-serial = "5.4.3"
mio-serial = "5.0.2"
tokio = { version = "1", features = ["full"] }
libloading = "0.5.2"
serde_with = "2.0.0"

# test stuff
raqote = { version = "0.8.1", features = ["text"] }
font-kit = "0.10.1"

[build-dependencies]
rustc_version = "0.2.3"